infra/azure/kubernetes/00-namespace-config.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: quorum-network
  labels:
    name: quorum-network
    app.kubernetes.io/name: quorum
    app.kubernetes.io/version: "latest"
